[package]
name = "myApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtree = "0.1.2"
hex-slice = "0.1.4"

[dev-dependencies]
criterion = "0.3.5"

[dependencies.blake3]
version = "0.3.8"
features = ["rayon"]
