[package]
name = "myApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtree = "0.1.2"
hex = "0.4.3"
hex-slice = "0.1.4"
rand = "0.8.4"
digest = "0.9.0"
blake2 = "0.9.2"
sha2 = "0.9.8"
sha3 = "0.9.1"
zeroize = { version = "1.4.2", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
criterion = "0.3.5"

[dependencies.blake3]
version = "0.3.8"
features = ["rayon"]


